--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 *.iml
-.gradle
+*.gradle
 /local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+.idea
+gradle
+gradlew
+gradle.*
+gradlew.*
