more gitignore updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 *.iml
 .gradle
-/local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+./idea
 .DS_Store
 /build
 /captures
@@ -14,3 +11,5 @@ gradlew
 gradle.*
 gradlew.*
 build.gradle
+local.*
+settings.gradle
