--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.iml
 *.gradle
-/local.properties
+.gradle
+./idea
 .DS_Store
 /build
 /captures
@@ -10,3 +11,4 @@ gradle
 gradlew
 gradle.*
 gradlew.*
+local.*
