--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,13 @@
         </activity>
         <activity android:name=".MenuActivity" />
         <activity android:name=".QuestionActivity" />
-        <activity android:name=".GameActivity"></activity>
+        <activity android:name=".GameActivity" />
+        <activity
+            android:name=".TabMenuActivity"
+            android:label="@string/title_activity_tab_menu"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".changePasswordActivity" />
+        <activity android:name=".EndGameActivity" />
     </application>
 
 </manifest>
