First try with Highscore, Profile changed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".ChangePasswordActivity" />
         <activity android:name=".EndGameActivity" />
+        <activity
+            android:name=".HighscoreActivity"
+            android:label="@string/title_activity_highscore"
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
     </application>
 
 </manifest>
