--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".ChangePasswordActivity" />
         <activity android:name=".EndGameActivity" />
         <activity
-            android:name=".HighscoreActivity"
+            android:name=".HighScoreActivity"
             android:label="@string/title_activity_highscore"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
