--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,34 +11,44 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ChangeAvatarActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ChangeAvatarActivity"
+            android:noHistory="true"/>
+        <activity android:name=".MainActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".QuestionActivity" />
-        <activity android:name=".GameActivity" />
+        <!--<activity android:name=".QuestionActivity"-->
+            <!--android:noHistory="true" />-->
+        <activity android:name=".GameActivity"
+            android:noHistory="true"/>
         <activity
             android:name=".TabMenuActivity"
             android:label="@string/title_activity_tab_menu"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity android:name=".ChangePasswordActivity" />
-        <activity android:name=".EndGameActivity" />
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:noHistory="true" />
+        <activity android:name=".ChangePasswordActivity"
+            android:noHistory="true" />
+        <!--<activity android:name=".EndGameActivity"-->
+            <!--android:noHistory="true" />-->
         <activity
             android:name=".HighScoreActivity"
             android:label="@string/title_activity_highscore"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:noHistory="true" />
         <activity
             android:name=".ShopActivity"
             android:label="@string/title_activity_shop"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:noHistory="true" />
     </application>
 
 </manifest>
